# speedo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  TODO.md  arm64-osx-clang.cmake  build.ps1  buildsystem.bff  clang-config.bff  clean.ps1  config.bff  env.ps1  fbuild.bff  homebrew.ps1  platform-config.bff  platform.bff  platform.ps1  powershell-config.bff  premake5.lua  python-config.bff  run.ps1  setup.ps1  setup_apt.sh  setup_brew.sh  setup_linux.sh  setup_macos.ps1  setup_macos.sh  setup_windows.ps1  slang.code-workspace  slang.h  tsan-suppressions.txt  vcpkg-configuration.json  vcpkg.json  vcpkg.ps1  vulkan-config.bff  x64-windows-clang.cmake
.github/workflows/: main.yml  setup.yml
bff/: buildsystem.bff
bff/config/: clang.bff  platform.bff  python.bff  vulkan.bff
examples/hello-world/: main.cpp
examples/model-viewer/: main.cpp
examples/volcano/: aabb.h  application-glfw.cpp  application-vulkan.cpp  application.cpp  application.h  application.inl  applicationcontext.h  buffer-vulkan.cpp  buffer.h  command-vulkan.cpp  command-vulkan.h  command-vulkan.inl  command.h  command.inl  concurrency-utils.cpp  concurrency-utils.h  concurrency-utils.inl  descriptorset-vulkan.cpp  descriptorset-vulkan.inl  descriptorset.h  descriptorset.inl  device-vulkan.cpp  device-vulkan.h  device.h  device.inl  deviceresource-vulkan.cpp  deviceresource.h  file.cpp  file.h  file.inl  frame-vulkan.cpp  frame-vulkan.h  frame-vulkan.inl  frame.h  frame.inl  gfx-types.h  gfx-vulkan.cpp  gfx-vulkan.h  gfx-vulkan.inl  gfx.h  (+75 more)
oldports/libpng/: 0001-include-math.h-to-avoid-pngpriv-to-drag-in-fp.h-head.patch  portfile.cmake
oldports/llvm/: 0002-fix-tools-install-dir.patch
oldports/python3/: portfile.cmake  vcpkg.json
oldports/shaderc/: compiler.cc-clang-windows.patch  portfile.cmake
oldports/tracy/: 003-vk-query-count.patch  portfile.cmake
oldports/usd/: vcpkg.json
oldports/vulkan-loader/: 0001-detect-msvc-clang-frontend-correctly.patch  portfile.cmake
oldports/vulkan-validationlayers/: 0003-fix-compile-error.patch  portfile.cmake
oldports/zeromq/: portfile.cmake
oldports/zstd/: 0001-clang-windows.patch  portfile.cmake
ports/capstone/: portfile.cmake
ports/cargs/: 0001-clang-disable-gnu-line-marker-error.patch  portfile.cmake
ports/catch2/: 0001-remove-cxx14-check.patch  portfile.cmake
ports/cppzmq/: vcpkg.json
ports/dbus/: portfile.cmake
ports/fastbuild/: 0001-windows-unicode-fixes.patch  portfile.cmake  vcpkg.json
ports/freetype/: ftver.rc-clang.patch  portfile.cmake
ports/glaze/: portfile.cmake  vcpkg.json
ports/glm/: portfile.cmake
ports/glslang/: 0001-add-public-headers.patch  0001-remove-debug-postfix.patch  0002-cxx26-fix-invalid-enum-use.patch  portfile.cmake  standalone_header_install_fix.patch  vcpkg.json
ports/imgui/: 0001-add-delete-buffer-callback.patch  0001-cxx26-fix-invalid-enum-use.patch  portfile.cmake
ports/llvm/: 0001-fix-tools-install-dir-and-llvm-config.patch  0002-fix-fastbuild-hmaptool-install-target.patch  0002-fix-tools-install-dir.patch  libunwind-default-option.patch  portfile.cmake  vcpkg.json
ports/lz4/: 0001-clang-support-on-windows.patch  CMakeLists.txt  portfile.cmake
ports/mimalloc/: 0001-clang-fix.patch  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
ports/mio/: portfile.cmake  vcpkg.json
ports/opensubdiv/: portfile.cmake  vcpkg.json
ports/picosha2/: portfile.cmake  vcpkg.json
ports/robin-hood-hashing/: aligned_malloc.patch  portfile.cmake
ports/sha-intrinsics/: 0001-add-config.patch  portfile.cmake  vcpkg.json
ports/shader-slang/: 0001-find-nvapi.patch  0001-fix-fastbuild-duplicate-neural-shader-targets.patch  0001-include-process.h.patch  0001-remove-SPIRV-Headers.patch  0002-dxil-support-option.patch  0002-fix-fastbuild-missing-capability-defs-target.patch  0002-include-intrin.h.patch  0002-miniz-include-path.patch  0003-add-crtdbg.h-includes.patch  0003-find-lz4-and-miniz.patch  0003-fix-fastbuild-capability-generator-build-order.patch  0003-imgui_impl_win32-include.patch  0004-cast-to-int64.patch  0004-cxx20-fixes.patch  0004-fix-fastbuild-static-build-glsl-module-install.patch  0004-generators-path-fix.patch  0005-remove-vcpkg-dependency.patch  0005-use-system-unordered_dense.patch  0006-add-SLANG_USE_SYSTEM_GLSLANG.patch  0006-add-package-cruft.patch  0007-change-MSVC-to-WIN32.patch  0008-msvc-include-crtdgb.h.patch  0009-temp-lld-patch.patch  0010-msvc-add-intrin.h-include.patch  clang-windows-2.patch  clang-windows.patch  portfile.cmake  remove-external.patch  slang-getEntryPointX-return-fix.patch  slang-lookup-generator-vcpkg.patch  spirv-tools-windows-link.patch  vcpkg.json  vcpkg.patch  windows-link.patch
ports/spirv-tools/: portfile.cmake  spirv-tools-shared.diff
ports/tracy/: 0001-msvc-flags.patch  0002-clang-NO_CHARCONV.patch  0003-compile-with-cxx17.patch  0003-cxx26-fix-invalid-enum-use.patch  0003-shared_mutex-is-a-cxx17-feature.patch  0004-fix-clang-windows-manifest-link.patch  msvc-flags.patch  portfile.cmake  vcpkg.json  vk-query-count.patch
ports/usd/: portfile.cmake  vcpkg.json
ports/vcpkg-cmake/: vcpkg.json  vcpkg_cmake_build.cmake  vcpkg_cmake_configure.cmake
ports/vcpkg-tool-fastbuild/: portfile.cmake  vcpkg.json
ports/vulkan-headers/: vcpkg.json
ports/vulkan-loader/: 0001-clang-windows.patch  0001-system-calls-under-unicode-define.patch  0002-UNICODE-fixes.patch  0002-fix-detection-of-clang-cl.patch  clang-windows.patch  portfile.cmake
ports/vulkan-validationlayers/: 0001-properly-set-exports-on-windows-with-clang-compiler.patch  0002-Win32-UNICODE-fixes.patch  0002-fix-implicit-ANSI-code-under-UNICODE-define.patch  0002-windows-unicode-fixes.patch  0003-change-WIN32-define-to-_WIN32.patch  0003-replace-deprecated-WIN32-define-with-_WIN32.patch  clang-windows.patch  portfile.cmake  (+1 more)
prelude/: slang-cpp-scalar-intrinsics.h  slang-cpp-types.h
scripts/: apt.ps1  clang-format.ps1  env.ps1  platform.ps1  vcpkg.ps1  winget.ps1
src/: .clang-tidy  version.h
toolchains/: clang-toolchain.cmake  clang.toolchain.cmake
(+323 files in other folders)
